--- a/mongodemo/src/main/resources/templates/searchTitle.html
+++ b/mongodemo/src/main/resources/templates/searchTitle.html
@@ -32,20 +32,20 @@
 	  </div>
 	  <div class="level-item has-text-centered">
 	    <div>
-	      <p class="heading">Actor</p>
-	      <p class="title"><span th:text="${hints.uniqueActors}"></span></p>
+	      <p class="heading">English</p>
+	      <p class="title"><span th:text="${hints.totalEnglishMovies}"></span></p>
 	    </div>
 	  </div>
 	  <div class="level-item has-text-centered">
 	    <div>
-	      <p class="heading">Language</p>
-	      <p class="title"><span th:text="${hints.uniqueLanguages}"></span></p>
+	      <p class="heading">Tamil</p>
+	      <p class="title"><span th:text="${hints.totalTamilMovies}"></span></p>
 	    </div>
 	  </div>
 	  <div class="level-item has-text-centered">
 	    <div>
-	      <p class="heading">Director</p>
-	      <p class="title"><span th:text="${hints.uniqueDirectors}"></span></p>
+	      <p class="heading">Telugu</p>
+	      <p class="title"><span th:text="${hints.totalTeluguMovies}"></span></p>
 	    </div>
 	  </div>
 	</nav>
@@ -57,7 +57,7 @@
   
 	<div class="level-right">  
 	  	<div class="level-item">
-	      <p class="subtitle is-5">
+	      <p class="subtitle is-6">
 	        Title
 	      </p>
 	    </div>
