--- a/mongodemo/src/main/resources/templates/index.html
+++ b/mongodemo/src/main/resources/templates/index.html
@@ -1,38 +1,116 @@
-<!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
+    <title>Pendataan Siswa | Home</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Image -->
+    <link rel="icon" th:href="@{/img/ubuntu.png}"/>
 
-    <title>Spring Boot - Mongo Movie Database</title>
 
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+     <!--Online-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+
+    <script th:src="@{/js/main.js}"></script>
 </head>
-
 <body>
+<div class="container">
+    <button class="btn btn-primary nBtn">New</button>
+    <table class="table table-hover">
+        <thead class="bg-dark text-white">
+        <tr>
+            <td>Nama</td>
+            <td>Jurusan</td>
+            <td>Action</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="s : ${movies}">
+            <td th:text="${s.title}"></td>
+            <td th:text="${s.actressName}"></td>
+            <td>
+                <a class="btn btn-primary text-white eBtn"
+                   th:href="@{/demo/edit(id=${s.id})}">Edit</a>
+                   
+                <a class="btn btn-danger text-white rBtn" th:href="${'/delete?id='+s.id}">Remove</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <ul class="nav nav-pills">
+        <li class="nav-item" th:each="i : ${#numbers.sequence(0, movies.totalPages-1)}">
+            <a th:href="${'?page='+i}" th:text="${i}" class="nav-link"
+               th:classappend="${buatPage}==${i}?'active':''"></a>
+        </li>
+    </ul>
+</div>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Mongo Movie Database</a>
-</nav>
+<!-- Modal Edit n New-->
+<div class="myForm">
+    <form th:action="@{/add}" method="post" th:object="${movieItem}">
+        <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"
+             id="exampleModal">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Save or Update</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="text" class="form-control" id="id" name="id" value="" th:field="*{id}">
+                        <div class="form-group">
+                            <label for="nama" class=" label">Title</label>
+                            <input type="text" class="form-control" id="nama" name="nama" value="" th:field="*{title}">
+                        </div>
+                        <div class="form-group">
+                            <label for="jurusan" class=" label">Actor</label>
+                            <input type="text" class="form-control" id="jurusan" name="jurusan" value="" th:field="*{actorName}">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 
-<main role="main" class="container">
-
-    <div class="starter-template">
-        <h1>Spring Boot Web Thymeleaf Example</h1>
-        <h2>
-            <span th:text="'Hello, ' + ${message}"></span>
-        </h2>
+<!-- Modal Edit n Remove-->
+<div class="myRemove">
+    <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"
+         id="exampleModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Save or Update</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="alert-danger text-dark p-2">Apakah anda yakin ?</div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <a class="btn btn-danger dBtn" href="">Delete</a>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
 
-    <ol>
-        <li th:each="task : ${tasks}" th:text="${task}"></li>
-    </ol>
 
-</main>
-<!-- /.container -->
-
-<script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
 </html>
