Mobile View design added

--- a/mongodemo/src/main/resources/templates/searchTitle.html
+++ b/mongodemo/src/main/resources/templates/searchTitle.html
@@ -139,10 +139,13 @@
 
 	<footer class="footer">
 	  <div class="content has-text-centered">
-	    <p>
-	      <strong>Movie Database </strong> build by <a href="https://twitter.com/get4gopim">get4gopim@gmail.com</a>. Running on
-	      <a href="https://pivotal.io/">Pivotal Cloud</a>. Styled by <a href="https://bulma.io/">Bulma</a>
-	    </p>
+          <p>
+              <strong>Backers Kit Search </strong> build by <a href="https://twitter.com/get4gopim">get4gopim@gmail.com</a>. Running on
+              <a href="https://pivotal.io/">Pivotal Cloud</a>.
+          </p>
+          <a href="https://bulma.io">
+              <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+          </a>
 	  </div>
 	</footer>
 	
