--- a/mongodemo/src/main/resources/templates/welcome.html
+++ b/mongodemo/src/main/resources/templates/welcome.html
@@ -176,8 +176,11 @@
 	  <div class="content has-text-centered">
 	    <p>
 	      <strong>Movie Database </strong> build by <a href="https://twitter.com/get4gopim">get4gopim@gmail.com</a>. Running on
-	      <a href="https://pivotal.io/">Pivotal Cloud</a>. Styled by <a href="https://bulma.io/">Bulma</a>
+	      <a href="https://pivotal.io/">Pivotal Cloud</a>.
 	    </p>
+        <p>
+            <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+        </p>
 	  </div>
 	</footer>
 	
