Mobile View - layout changed

--- a/mongodemo/src/main/resources/templates/addMobileView.html
+++ b/mongodemo/src/main/resources/templates/addMobileView.html
@@ -22,8 +22,8 @@
             <div class="column is-mobile">
                 <div class="box is-mobile">
 
-                    <div class="field">
-                        <div class="control has-icons-left has-icons-right">
+                    <div class="field has-addons has-addons-centered">
+                        <div class="control ">
                             <img th:src="*{movieItem.imageUrl}">
                         </div>
                     </div>
